upload slides for tutorial

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>ER Tutorial</title>
+<title>NExT++ CIKM2019 Tutorial</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -93,11 +93,19 @@ table.gridtable {
         </div>
     </div>
 
+
+    <div class="w3-center" style="margin-left:80px;margin-right:80px">
+      <a class="w3-large w3-indigo w3-button"
+          href="slides/CIKM2019-graph-for-recommendation.pdf" style="text-decoration:none">Download slides<i class="far fa-file-pdf"></i></a>
+    </div>
+
     <hr>
     <div id="outline">
         <div class="w3-center w3-padding-32">
             <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">OUTLINE</span>
         </div>
+
+        
         <!-- <div style="margin-left:200px; margin-right:200px">
             <p class="w3-large">Outline goes here</p>
         </div> -->
