--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ table.gridtable {
                   <td class="w3-light-grey">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7.1 User-Item Bipartite Graph</td>
                 </tr>
                 <tr>
-                  <td class="w3-light-grey">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7.2 Recent Works: GC-MC, SpectralCF, NGCF, LightGCN </td>
+                  <td class="w3-light-grey">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7.2 Recent Works: GC-MC, SpectralCF, NGCF </td>
                 </tr>
 
 
