--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>NExT++ CIKM2019 Tutorial</title>
+<title>NExT++ WSDM2020 Tutorial</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -71,7 +71,8 @@ table.gridtable {
 <div class="w3-center w3-text-white w3-padding-32" style="height: 410px; width:100%; margin-top:0px;margin-bottom:20px; position: relative; background-image: url(img/peking.jpg)">
   <div class="w3-panel" style="text-align: left; margin-left: 160px">
     <h1><b>Learning and Reasoning on Graph for Recommendation</b></h1>
-    <h3>Tutorial at ACM Conference on Information & Knowledge Management (CIKM), Beijing, Nov 3-7, 2019</p>
+<!--     <h3>Tutorial at ACM Conference on Information & Knowledge Management (CIKM), Beijing, Nov 3-7, 2019</p> -->
+    <h3>Tutorial at The 13th ACM International WSDM Conference (WSDM), Houston, Texas, February 3-7, 2020</p>
     <img src="img/LOGO.png" alt="Jane" width="300px"> 
   </div>
 </div>
