--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ table.gridtable {
     <h1><b>Learning and Reasoning on Graph for Recommendation</b></h1>
 <!--     <h3>Tutorial at ACM Conference on Information & Knowledge Management (CIKM), Beijing, Nov 3-7, 2019</p> -->
     <h3>Tutorial at The 13th ACM International WSDM Conference (WSDM), Houston, Texas, February 3-7, 2020</p>
-    <img src="img/LOGO.png" alt="Jane" width="300px"> 
+<!--     <img src="img/LOGO.png" alt="Jane" width="300px">  -->
+    <img src="img/wsdm2020-logo.png" alt="Jane" width="300px"> 
   </div>
 </div>
 
