--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@ table.gridtable {
 
 <!-- Content -->
 <!-- background-color: #7C1200; -->
-<div class="w3-center w3-text-white w3-padding-32" style="height: 410px; width:100%; margin-top:0px;margin-bottom:20px; position: relative; background-image: url(img/peking.jpg)">
+<!-- <div class="w3-center w3-text-white w3-padding-32" style="height: 410px; width:100%; margin-top:0px;margin-bottom:20px; position: relative; background-image: url(img/peking.jpg)"> -->
+  <div class="w3-center w3-text-white w3-padding-32" style="height: 410px; width:100%; margin-top:0px;margin-bottom:20px; position: relative; background-image: url(img/houston.png)">
   <div class="w3-panel" style="text-align: left; margin-left: 160px">
     <h1><b>Learning and Reasoning on Graph for Recommendation</b></h1>
 <!--     <h3>Tutorial at ACM Conference on Information & Knowledge Management (CIKM), Beijing, Nov 3-7, 2019</p> -->
     <h3>Tutorial at The 13th ACM International WSDM Conference (WSDM), Houston, Texas, February 3-7, 2020</p>
 <!--     <img src="img/LOGO.png" alt="Jane" width="300px">  -->
-    <img src="img/wsdm2020-logo.png" alt="Jane" width="300px"> 
+    <img src="img/wsdm-logo.png" alt="Jane" width="300px"> 
   </div>
 </div>
 
